Add recording video link to cover

--- a/presentation.htm
+++ b/presentation.htm
@@ -42,10 +42,10 @@
 
   <body class="responsive">
     <div class="reveal">
-      <div class="slides"><section class="variable-size-headings has-footer light cover-container present has-light-background fitted" data-updated="true" style="display: grid;">
+      <div class="slides"><section class="variable-size-headings has-footer light v-split-container present has-light-background fitted" data-updated="true" style="display: grid;">
 
       <div class="header"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
-      <div class="layout-cover" style="width: 100%; font-size: 0.953rem;">
+      <div class="layout-v-split media-grid" style="width: 100%; font-size: 0.813rem;">
         <div style=""><h1 id="deployyourpythoncodefasterwithpex">Deploy Your Python Code Faster with PEX</h1>
 
 <h6 id="northbaypython2023">North Bay Python 2023</h6>
@@ -53,10 +53,13 @@
 <h6 id="shalabhchaturvedi">Shalabh Chaturvedi</h6>
 
 <h6 id="dagstercloud">Dagster Cloud</h6></div>
+        <div style=""><blockquote class="is-single-quote"><div class="line"></div>
+<p>Recording</p>
+<div class="videoWrapper youtube" data-id="pyRwQByuFfc" onclick="iASpeaker.insertYouTubeIFrame(this);"><img src="https://i.ytimg.com/vi/pyRwQByuFfc/sddefault.jpg"><div class="playButton"></div></div>
+<div class="line"></div></blockquote></div>
       </div>
       <div class="footnotes"></div>
       <div class="footer"><div class="leading">1</div><div class="middle"></div><div class="trailing">nbpy2023</div></div>
-      
 </section><section class="variable-size-headings has-footer light section-container present has-light-background fitted" data-updated="true" style="display: grid;">
 
       <div class="header"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
